<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
      android:background="#000000"
    android:layout_height="fill_parent" >

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical" 
           android:background="#000000">
        <!--  android:background="@drawable/main_background"-->
       
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dip"
            android:textColor="#FFFFFF"
            android:layout_y="20dip"
            android:text="@string/your_name" />

        <EditText
            android:id="@+id/your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="80dip"
            android:textColor="#FFFFFF"
            android:layout_y="10dip"
            android:hint="@string/your_name_hint"
            android:inputType="textMultiLine"
            android:singleLine="true"
            android:textStyle="bold"
            android:width="200dp" >

            <requestFocus />

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dip"
            android:textColor="#FFFFFF"
            android:layout_y="80dip"
            android:text="@string/height" />

        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="80dip"
            android:layout_y="70dip"
            android:hint="@string/height_hint"
            android:textColor="#FFFFFF"
            android:inputType="number|textMultiLine"
            android:singleLine="true"
            android:textStyle="bold"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dip"
            android:textColor="#FFFFFF"
            android:layout_y="140dip"
            android:text="@string/fm" />

        <EditText
            android:id="@+id/fm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="80dip"
            android:layout_y="130dip"
            android:hint="@string/fm_hint"
            android:textColor="#FFFFFF"
            android:inputType="textCapWords|textMultiLine"
            android:singleLine="true"
            android:textStyle="bold"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dip"
            android:textColor="#FFFFFF"
            android:layout_y="200dip"
            android:text="@string/job" />

        <EditText
            android:id="@+id/job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="80dip"
            android:layout_y="190dip"
            android:hint="@string/job_hint"
            android:inputType="textMultiLine"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:textStyle="bold"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_x="20dip"
            android:layout_y="260dip"
            android:text="@string/what_you_like_most" />

        <EditText
            android:id="@+id/what_you_like_most"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="80dip"
            android:textColor="#FFFFFF"
            android:layout_y="250dip"
            android:hint="@string/what_you_like_most_hint"
            android:inputType="textMultiLine"
            android:singleLine="true"
            android:textStyle="bold"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dip"
            android:layout_y="320dip"
            android:textColor="#FFFFFF"
            android:text="@string/av" />

        <EditText
            android:id="@+id/av"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="80dip"
            android:layout_y="310dip"
            android:hint="@string/av_hint"
            android:inputType="textMultiLine"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:textStyle="bold"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dip"
            android:layout_y="380dip"
            android:textColor="#FFFFFF"
            android:text="@string/music" />

        <EditText
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="80dip"
            android:layout_y="370dip"
            android:hint="@string/music_hint"
            android:inputType="textMultiLine"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:width="200dp" />

        <Button
            android:id="@+id/bn"
            android:layout_width="162dp"
            android:layout_height="30dp"
            android:layout_x="116dp"
            android:layout_y="413dp"
            android:background="@drawable/button"
            android:orientation="horizontal"
            android:text="@string/get"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bn2"
            android:layout_width="163dp"
            android:layout_height="32dp"
            android:layout_x="149dp"
            android:layout_y="445dp"
            android:background="@drawable/button"
            android:orientation="horizontal"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </AbsoluteLayout>

</ScrollView>